--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,11 @@
     },
     "jsx": "react"
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "components/Test.js"
+  ]
 }
