--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "components/Test.js"
+    "components/FilterModalContent.js"
   ]
 }
