--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@miblanchard/react-native-slider": "^2.6.0",
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/native": "^6.0.2",
+    "async-storage": "^0.1.0",
     "expo": "^52.0.11",
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
