--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "jsx": "react"
+    "jsx": "react-jsx"
   },
   "include": [
     "**/*.ts",
@@ -14,5 +14,5 @@
     "expo-env.d.ts",
     "components/FilterModalContent.js",
     "components/AddablePressables.js"
-  ]
+, "components/setCard/SetCard.jsx", "app/(tabs)/_layout.tsx"  ]
 }
