--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@miblanchard/react-native-slider": "^2.6.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "^52.0.11",
+    "expo-blur": "~14.0.3",
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
