--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.0.2",
     "async-storage": "^0.1.0",
     "expo": "^52.0.11",
+    "expo-blur": "^14.0.3",
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
