--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"  ]
+    "expo-env.d.ts", "components/TooltipWrapper.js"  ]
 }
