--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
+    "react-native-popover-view": "^6.1.0",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-simple-popover": "^2.1.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "~0.19.10",
     "zustand": "^5.0.3"
   },
