--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "@gorhom/bottom-sheet": "^5.0.6",
     "@gorhom/portal": "^1.0.14",
     "@miblanchard/react-native-slider": "^2.6.0",
-    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
-    "async-storage": "^0.1.0",
     "expo": "^52.0.11",
-    "expo-blur": "^14.0.3",
+    "expo-blur": "~14.0.3",
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -41,13 +40,12 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
     "react-native-popover-view": "^6.1.0",
-    "react-native-reanimated": "^3.16.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-simple-popover": "^2.1.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-tooltip-2": "^0.1.3",
-    "react-native-vector-icons": "^10.2.0",
     "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "~0.19.10",
     "zustand": "^5.0.3"
