--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@gorhom/portal": "^1.0.14",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "^52.0.11",
     "expo-blur": "~14.0.3",
