--- a/package.json
+++ b/package.json
@@ -16,54 +16,45 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@gorhom/bottom-sheet": "^5.0.6",
-    "@gorhom/portal": "^1.0.14",
     "@miblanchard/react-native-slider": "^2.6.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-picker/picker": "^2.11.0",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "^52.0.11",
-    "expo-blur": "~14.0.3",
-    "expo-checkbox": "~4.0.0",
-    "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
-    "expo-splash-screen": "^0.29.13",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.4",
-    "expo-web-browser": "~14.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "^0.76.3",
-    "react-native-floating-action": "^1.22.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-linear-gradient": "^2.8.3",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.0",
+    "@react-navigation/native": "^7.0.14",
+    "@types/react": "~19.0.10",
+    "expo": "^53.0.7",
+    "expo-blur": "~14.1.4",
+    "expo-constants": "~17.1.5",
+    "expo-font": "~13.3.1",
+    "expo-linking": "~7.1.4",
+    "expo-router": "~5.0.5",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-native": "0.79.2",
     "react-native-paper": "^5.12.5",
-    "react-native-popover-view": "^6.1.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-simple-popover": "^2.1.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-tooltip-2": "^0.1.3",
     "react-native-walkthrough-tooltip": "^1.6.0",
-    "react-native-web": "~0.19.10",
-    "zustand": "^5.0.3"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.25.1",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^9.25.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "jest": "^29.2.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3",
+    "react-test-renderer": "^19.0.0",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.31.1"
   },
   "private": true
