--- a/.editorconfig
+++ b/.editorconfig
@@ -203,7 +203,7 @@ ij_typescript_class_method_decorator_wrap = off
 ij_typescript_comma_on_new_line = false
 ij_typescript_do_while_brace_force = never
 ij_typescript_else_on_new_line = false
-ij_typescript_enforce_trailing_comma = remove
+ij_typescript_enforce_trailing_comma = whenmultiline
 ij_typescript_enum_constants_wrap = on_every_item
 ij_typescript_extends_keyword_wrap = off
 ij_typescript_extends_list_wrap = off
@@ -327,7 +327,7 @@ ij_typescript_ternary_operation_signs_on_next_line = false
 ij_typescript_ternary_operation_wrap = off
 ij_typescript_union_types_wrap = on_every_item
 ij_typescript_use_chained_calls_group_indents = false
-ij_typescript_use_double_quotes = false
+ij_typescript_use_double_quotes = true
 ij_typescript_use_explicit_js_extension = auto
 ij_typescript_use_import_type = auto
 ij_typescript_use_path_mapping = always
@@ -389,7 +389,7 @@ ij_javascript_class_method_decorator_wrap = off
 ij_javascript_comma_on_new_line = false
 ij_javascript_do_while_brace_force = never
 ij_javascript_else_on_new_line = false
-ij_javascript_enforce_trailing_comma = remove
+ij_javascript_enforce_trailing_comma = whenmultiline
 ij_javascript_extends_keyword_wrap = off
 ij_javascript_extends_list_wrap = off
 ij_javascript_field_prefix = _
@@ -511,7 +511,7 @@ ij_javascript_ternary_operation_signs_on_next_line = false
 ij_javascript_ternary_operation_wrap = off
 ij_javascript_union_types_wrap = on_every_item
 ij_javascript_use_chained_calls_group_indents = false
-ij_javascript_use_double_quotes = false
+ij_javascript_use_double_quotes = true
 ij_javascript_use_explicit_js_extension = auto
 ij_javascript_use_import_type = auto
 ij_javascript_use_path_mapping = always
