--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "^0.20.0",
-    "expo-dev-client": "~5.1.8"
+    "expo-dev-client": "~5.1.8",
+    "expo-clipboard": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
