--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@types/react": "~19.0.10",
     "expo": "^53.0.7",
     "expo-blur": "~14.1.4",
+    "expo-clipboard": "~7.1.4",
     "expo-constants": "~17.1.5",
+    "expo-dev-client": "~5.1.8",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.5",
@@ -40,9 +42,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-walkthrough-tooltip": "^1.6.0",
-    "react-native-web": "^0.20.0",
-    "expo-dev-client": "~5.1.8",
-    "expo-clipboard": "~7.1.4"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -50,7 +50,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.0.7",
-    "eslint": "^9.25.1",
+    "eslint": "^9.26.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
