--- a/.editorconfig
+++ b/.editorconfig
@@ -168,7 +168,7 @@ ij_typescript_align_multiline_binary_operation = false
 ij_typescript_align_multiline_chained_methods = false
 ij_typescript_align_multiline_extends_list = false
 ij_typescript_align_multiline_for = true
-ij_typescript_align_multiline_parameters = true
+ij_typescript_align_multiline_parameters = false
 ij_typescript_align_multiline_parameters_in_calls = false
 ij_typescript_align_multiline_ternary_operation = false
 ij_typescript_align_object_properties = 0
@@ -220,7 +220,7 @@ ij_typescript_function_expression_brace_style = end_of_line
 ij_typescript_function_parameter_decorator_wrap = off
 ij_typescript_if_brace_force = never
 ij_typescript_import_merge_members = global
-ij_typescript_import_prefer_absolute_path = global
+ij_typescript_import_prefer_absolute_path = true
 ij_typescript_import_sort_members = true
 ij_typescript_import_sort_module_name = false
 ij_typescript_import_use_node_resolution = true
@@ -356,7 +356,7 @@ ij_javascript_align_multiline_binary_operation = false
 ij_javascript_align_multiline_chained_methods = false
 ij_javascript_align_multiline_extends_list = false
 ij_javascript_align_multiline_for = true
-ij_javascript_align_multiline_parameters = true
+ij_javascript_align_multiline_parameters = false
 ij_javascript_align_multiline_parameters_in_calls = false
 ij_javascript_align_multiline_ternary_operation = false
 ij_javascript_align_object_properties = 0
@@ -405,7 +405,7 @@ ij_javascript_function_expression_brace_style = end_of_line
 ij_javascript_function_parameter_decorator_wrap = off
 ij_javascript_if_brace_force = never
 ij_javascript_import_merge_members = global
-ij_javascript_import_prefer_absolute_path = global
+ij_javascript_import_prefer_absolute_path = true
 ij_javascript_import_sort_members = true
 ij_javascript_import_sort_module_name = false
 ij_javascript_import_use_node_resolution = true
