--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "license-checker": "^25.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.2",
+    "react-native-oss-license": "^0.7.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -59,5 +61,6 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.31.1"
   },
-  "private": true
+  "private": true,
+  "license": "Proprietary"
 }
