--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.2",
+    "react-native-dynamic-vector-icons": "^2.0.0",
     "react-native-oss-license": "^0.7.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.17.4",
