replace usePressableImages context by usePressableElementsStore zustand

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,14 @@
     "esModuleInterop": true
   },
   "extends": "expo/tsconfig.base",
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "app", "components", "babel.config.js"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "app",
+    "components",
+    "babel.config.js",
+    "stores/usePressablesElementsStore.js"
+  ]
 }
