--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "expo-blur": "~14.1.4",
     "expo-clipboard": "~7.1.4",
     "expo-constants": "~17.1.5",
-    "expo-dev-client": "~5.1.8",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.5",
@@ -34,9 +33,9 @@
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
     "license-checker": "^25.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-dom": "19.0.0",
     "react-native-dynamic-vector-icons": "^2.0.0",
     "react-native-oss-license": "^0.7.0",
     "react-native-paper": "^5.12.5",
@@ -45,7 +44,6 @@
     "react-native-screens": "~4.10.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-walkthrough-tooltip": "^1.6.0",
-    "react-native-web": "^0.20.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -59,7 +57,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "jest": "^29.2.1",
-    "react-test-renderer": "^19.0.0",
+    "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.31.1"
   },
