--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "app",
     "components",
     "babel.config.js",
-    "stores/usePressablesElementsStore.js"
+    "stores/usePressableElementsStore.ts"
   ]
 }
