--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-dynamic-vector-icons": "^2.0.0",
     "react-native-oss-license": "^0.7.0",
     "react-native-paper": "^5.12.5",
