--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "postinstall": "rndebugger-open"
   },
   "jest": {
     "preset": "jest-expo"
@@ -33,6 +34,7 @@
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
     "license-checker": "^25.0.1",
+    "postinstall": "^0.11.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -59,6 +61,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "jest": "^29.2.1",
+    "react-native-debugger-open": "^0.4.3",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.31.1"
