--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "2.11.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^7.0.14",
     "@types/react": "~19.0.10",
     "expo": "^53.0.7",
@@ -28,23 +28,23 @@
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.5",
+    "expo-router": "~5.1.1",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "~14.1.6",
+    "expo-web-browser": "~14.2.0",
     "license-checker": "^25.0.1",
     "postinstall": "^0.11.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "^0.79.4",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-dynamic-vector-icons": "^2.0.0",
     "react-native-oss-license": "^0.7.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "^0.20.0",
