--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.25.3",
     "@expo/vector-icons": "^14.0.2",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -48,12 +49,13 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "^0.20.0",
-    "zustand": "^5.0.4"
+    "zustand": "^5.0.4",
+    "expo-localization": "~16.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "@eslint/js": "^9.25.1",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^9.26.0",
