--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.4",
+    "expo-localization": "~16.1.5",
     "expo-router": "~5.1.1",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -49,8 +50,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "^0.20.0",
-    "zustand": "^5.0.4",
-    "expo-localization": "~16.1.5"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
