change a lot of things (Sets have now an unique id, ...)

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "license-checker": "^25.0.1",
+    "nanoid": "^5.1.5",
     "postinstall": "^0.11.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
