--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": "^0.79.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-dynamic-vector-icons": "^2.0.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-oss-license": "^0.7.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.17.4",
