--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^7.0.14",
     "@types/react": "~19.0.10",
-    "expo": "^53.0.16",
+    "expo": "^53.0.17",
     "expo-blur": "~14.1.4",
     "expo-clipboard": "~7.1.5",
-    "expo-constants": "~17.1.5",
+    "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
-    "expo-linking": "~7.1.6",
+    "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
-    "expo-router": "~5.1.2",
-    "expo-splash-screen": "~0.30.8",
+    "expo-router": "~5.1.3",
+    "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
