--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
+    "expo-navigation-bar": "~4.2.7",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -54,8 +55,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "^0.20.0",
-    "zustand": "^5.0.4",
-    "expo-navigation-bar": "~4.2.7"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
