--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "nanoid": "^5.1.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "^0.79.5",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-dynamic-vector-icons": "^2.0.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.12.5",
