--- a/.github/workflows/expo-build.yml
+++ b/.github/workflows/expo-build.yml
@@ -18,7 +18,7 @@ jobs:
       - name: 🏗 Setup EAS
         uses: expo/expo-github-action@v8
         with:
-          eas-version: ^53
+          eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📦 Install dependencies
