--- a/.github/workflows/expo-build.yml
+++ b/.github/workflows/expo-build.yml
@@ -25,4 +25,4 @@ jobs:
         run: npm install
 
       - name: 🚀 Create update
-        run: eas build --non-interactive --platform android --profile preview
+        run: eas build --non-interactive --platform android --profile preview --local
