--- a/.github/workflows/expo-build.yml
+++ b/.github/workflows/expo-build.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Upload application
         uses: actions/upload-artifact@v4
         with:
-          name: app
+          name: app-release.apk
           path: ./build-*.apk
           retention-days: 3
