--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["*"]
     },
