--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
         uses: pozetroninc/github-action-get-latest-release@master
         with:
           repository: ClementR22/MK8DSB
-          excludes: 'prerelease', 'draft'
+          excludes: 'prerelease'
 
       - name: Get latest commit hash
         id: get-latest-commit
