--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,9 @@ jobs:
     outputs:
       last-commit: ${{steps.get-latest-commit.outputs.value}}
     steps:
+      - name: Setup git
+        uses: actions/checkout@v5
+
       - name: Get latest commit hash
         id: get-latest-commit
         run: echo "value=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
@@ -58,10 +61,10 @@ jobs:
     needs: [check-description, check-version-bump, get-nightly-version]
     steps:
       - name: Setup repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v5
 
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v5
         with:
           node-version: 18.x
           cache: npm
