--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,18 +43,9 @@ jobs:
         if: ${{inputs.stable && !inputs.version-bump}}
         run: echo "Missing version bump for a stable release" && exit 1
 
-  get-nightly-version:
-    runs-on: ubuntu-latest
-    outputs:
-      last-commit: ${{steps.get-latest-commit.outputs.value}}
-    steps:
-      - name: Setup git
-        uses: actions/checkout@v5
-
-
   build:
     runs-on: ubuntu-latest
-    needs: [check-description, check-version-bump, get-nightly-version]
+    needs: [check-description, check-version-bump]
     steps:
       - name: Setup repo
         uses: actions/checkout@v5
@@ -124,7 +115,7 @@ jobs:
 
   nightly:
     if: ${{!inputs.stable}}
-    needs: [get-nightly-version, build]
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
