--- a/package.json
+++ b/package.json
@@ -15,42 +15,41 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.1.6",
     "@miblanchard/react-native-slider": "^2.6.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.0.14",
-    "@types/react": "~19.0.10",
-    "expo": "^53.0.19",
-    "expo-blur": "~14.1.4",
-    "expo-clipboard": "~7.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-font": "~13.3.2",
-    "expo-linking": "~7.1.7",
-    "expo-localization": "~16.1.6",
-    "expo-navigation-bar": "~4.2.7",
-    "expo-router": "~5.1.3",
-    "expo-splash-screen": "^0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.10",
-    "expo-web-browser": "~14.2.0",
+    "@types/react": "~19.1.10",
+    "expo": "^54.0.13",
+    "expo-blur": "~15.0.7",
+    "expo-clipboard": "~8.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-font": "~14.0.9",
+    "expo-linking": "~8.0.8",
+    "expo-localization": "~17.0.7",
+    "expo-router": "~6.0.12",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.8",
     "nanoid": "^5.1.5",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "^0.79.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-dynamic-vector-icons": "^2.0.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-paper": "^5.12.5",
     "react-native-popover-view": "^6.1.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-walkthrough-tooltip": "^1.6.0",
-    "react-native-web": "^0.20.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "uuid": "^11.1.0",
     "zustand": "^5.0.4"
   },
@@ -59,7 +58,7 @@
     "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.25.1",
     "@types/jest": "^29.5.14",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^9.26.0",
     "eslint-plugin-react": "^7.37.5",
@@ -68,7 +67,7 @@
     "jest": "^29.2.1",
     "react-native-debugger-open": "^0.4.3",
     "react-test-renderer": "19.0.0",
-    "typescript": "~5.8.3",
+    "typescript": "~5.9.2",
     "typescript-eslint": "^8.31.1"
   },
   "private": true,
