--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "app",
     "components",
     "babel.config.js",
-    "stores/usePressableElementsStore.ts"
+    "stores/usePressableElementsStore.ts",
+    "plugins/withAndroidTransparentNavigation.js"
   ]
 }
