--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
+    "toggle-switch-react-native": "^3.3.0",
     "uuid": "^11.1.0",
     "zustand": "^5.0.4"
   },
