--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -150,7 +150,7 @@ jobs:
         run: echo "value=$(cat nightly-version.txt)" >> "$GITHUB_OUTPUT"
 
       - name: Upload nightly release
-        uses: ncipollo/release-action@1
+        uses: ncipollo/release-action@v1
         env:
           GITHUB_TOKEN: ${{github.token}}
         with:
@@ -205,7 +205,7 @@ jobs:
         run: mv app-release.apk mk8dsb_${{steps.version.outputs.v-version}}.apk
 
       - name: Upload stable release
-        uses: ncipollo/release-action@1
+        uses: ncipollo/release-action@v1
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
