--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
+    "i18next": "^25.6.0",
     "nanoid": "^5.1.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.1.3",
     "react-native": "0.81.4",
     "react-native-dynamic-vector-icons": "^2.0.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-localize": "^3.5.4",
     "react-native-pager-view": "^6.9.1",
     "react-native-paper": "^5.12.5",
     "react-native-popover-view": "^6.1.0",
