--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "@/*": ["*"]
     },
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "extends": "expo/tsconfig.base",
   "include": [
@@ -17,6 +18,7 @@
     "app",
     "components",
     "babel.config.js",
-    "stores/usePressableElementsStore.ts"
+    "stores/usePressableElementsStore.ts",
+    "translations"
   ]
 }
