--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-pager-view": "^6.9.1",
     "react-native-paper": "^5.12.5",
     "react-native-popover-view": "^6.1.0",
+    "react-native-popup-menu": "^0.18.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
