--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "~19.1.10",
     "expo": "^54.0.13",
     "expo-blur": "~15.0.7",
+    "expo-checkbox": "~5.0.7",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
@@ -44,6 +45,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-paper": "^5.12.5",
+    "react-native-popup-menu": "^0.18.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
