--- a/eas.json
+++ b/eas.json
@@ -13,16 +13,13 @@
       "android": {
         "buildType": "apk",
         "gradleCommand": ":app:assembleRelease"
-      },
-      "channel": "preview"
+      }
     },
     "production": {
-      "autoIncrement": true,
-      "channel": "production"
+      "autoIncrement": true
     }
   },
   "submit": {
-    "production": {},
-    "preview": {}
+    "production": {}
   }
 }
