Revert "correct last commit, remove lint check"
This reverts commit b784959b5852d9f799a10a10139343afc602c625.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,7 +109,7 @@ jobs:
 
       - name: Build apk (local)
         if: ${{!inputs.skip-build}}
-        run: eas build --non-interactive --platform android --profile preview --local --build-properties "gradleCommand=.:app:assembleRelease -x lintVitalAnalyzeRelease -x lintRelease" || exit 1
+        run: eas build --non-interactive --platform android --profile preview --local || exit 1
 
       - name: Store build name
         id: build-name
