restore eas.json and build.yml

--- a/eas.json
+++ b/eas.json
@@ -12,10 +12,8 @@
       "distribution": "internal",
       "android": {
         "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease",
-        "withoutLint": true
-      },
-      "channel": "preview"
+        "gradleCommand": ":app:assembleRelease"
+      }
     },
     "production": {
       "autoIncrement": true
