--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -63,3 +63,7 @@ expo.useLegacyPackaging=false
 # Specifies whether the app is configured to use edge-to-edge via the app config or plugin
 # WARNING: This property has been deprecated and will be removed in Expo SDK 55. Use `edgeToEdgeEnabled` or `react.edgeToEdgeEnabled` to determine whether the project is using edge-to-edge.
 expo.edgeToEdgeEnabled=true
+
+# Package version and versionCode
+VERSION_NAME=0.1.1
+VERSION_CODE=1
